--- a/Verregular/Verregular/ru.lproj/Localizable.strings
+++ b/Verregular/Verregular/ru.lproj/Localizable.strings
@@ -7,7 +7,11 @@
 */
 "Select verbs" = "Выбрать глаголы";
 "Train verbs" = "Тренировать глаголы";
+"Training is over" = "Тренировка окончена";
 "Try again.." = "Попробуй еще раз..";
+"Nice!" = "Отлично!";
+"You training all words - " = "Вы потренировали все слова - ";
+"OK" = "Окей";
 "Check" = "Проверить";
 "blow" = "дуть";
 "draw" = "рисовать";
