--- a/Verregular/Verregular/ru.lproj/Localizable.strings
+++ b/Verregular/Verregular/ru.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "Nice!" = "Отлично!";
 "You training all words - " = "Вы потренировали все слова - ";
 "OK" = "Окей";
+"Choice verbs in main menu" = "Выберите слова в главном меню";
 "Check" = "Проверить";
 "blow" = "дуть";
 "draw" = "рисовать";
